--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,20 +3,26 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  # - title: "Talks"
+  #   url: /talks/    
+
+  - title: "Team"
+    url: /team/
+    
+  # - title: "Portfolio"
+  #   url: /portfolio/
+        
+  # - title: "Blog Posts"
+  #   url: /year-archive/
+  
+  - title: "Services"
+    url: /services/
 
   - title: "Teaching"
-    url: /teaching/    
+    url: /teaching/   
+
+  # - title: "CV"
+  #   url: /cv/
     
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
-  - title: "CV"
-    url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
+  - title: "Links"
+    url: /links/
