--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,6 +21,9 @@ main:
   - title: "Teaching"
     url: /teaching/   
 
+  - title: "Contact"
+    url: /contact/   
+
   # - title: "CV"
   #   url: /cv/
     
