--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Yongle Zhang"
-  avatar           : "yongle.jpeg"
+  avatar           : "yongle-2020.jpg"
   bio              : "Assistant Professor @ Purdue University"
   location         : #"Location"
   employer         : # "Purdue University Computer Science Department"
