--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Yongle Zhang"
   avatar           : "yongle-2020.jpg"
   bio              : "Assistant Professor @ Purdue University"
-  location         : #"Location"
+  location         : "LWSN 1123G"
   employer         : # "Purdue University Computer Science Department"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.ca/citations?user=bqROsSsAAAAJ&hl=en"
